# python_labs

./: README.md
1_lab/: README.md  my_first_app.ipynb  my_first_app.py
2_lab/: README.md  my_second_app.ipynb  test.txt
3_lab/: README.md  note.ipynb
4_lab/: README.md  example.txt  my_fourth_app.ipynb  my_fourth_app.py
4_lab/pictures/: desktop.ini
5_lab/: README.md  app.py  assert_input.py  figure_assert.py  name_hobby.py  pyproject.toml  test_figure.py  test_pytest.py
5_lab/htmlcov/: app_py.html  class_index.html  function_index.html  index.html  status.json
exam/: main.py  test.py
